Fix font size of names on smaller screens

--- a/index.scss
+++ b/index.scss
@@ -49,7 +49,14 @@ ul {
 	margin: 0 auto;
 	margin-bottom: 20px;
 	text-align: left;
-	font-size: 32px;
+
+	h1 {
+		font-size: 32px;
+	}
+
+	h2 {
+		font-size: 24px;
+	}
 }
 
 #taglines {
